# twitter_clone_rust

./: .env  Cargo.toml  README.md  build.rs
back_end/: .env  Cargo.toml  LICENSE  build.rs
back_end/migrations/: 20240310083919_create_twitter_clone.sql  drop.pgsql
back_end/proto/: twitter_clone.proto
back_end/src/: main.rs
back_end/src/database/: database_client.rs
back_end/src/database/models/: mod.rs
back_end/src/interceptors/: auth_interceptor.rs  mod.rs
back_end/src/services/: mod.rs  tweet.rs  user.rs
back_end/src/tower_layers/: auth_layer.rs  mod.rs
front_end/: eslint.config.js  package-lock.json  package.json  tsconfig.json  vite.config.ts
front_end/src/: App.tsx  main.tsx
front_end/src/api/grpc/: TweetService.ts  clientService.ts  userService.ts
front_end/src/components/AppShell/: AppShell.tsx
front_end/src/components/Post/: Post.tsx
front_end/src/proto/: Twitter_cloneServiceClientPb.ts  twitter_clone.client.ts  twitter_clone.ts  twitter_clone_grpc_pb.d.ts  twitter_clone_pb.d.ts  twitter_clone_pb.js
front_end/src/routes/: route.tsx
front_end/src/store/: store.ts  userSlice.ts
front_end/src/theme/: theme.ts
front_end/src/utils/: constants.ts  grpcStatus.ts  router.ts  types.d.ts  unreachableError.ts
front_end/src/views/Home/: Home.tsx
migrations/: 20240310083919_create_twitter_clone.sql
proto/: twitter_clone.proto  user.proto
src/: main.rs
src/database/: database_client.rs  mod.rs
src/database/models/: mod.rs
src/interceptors/: auth_interceptor.rs  mod.rs
src/services/: user.rs
src/tower_layers/: auth_layer.rs
(+15 files in other folders)
