[package]
name = "twitter_clone"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.2", features = ["derive"] }
dotenv = "0.15.0"
sqlx = { version = "0.7", features = [ "runtime-async-std", "tls-native-tls", "postgres" ] }
tonic = "0.11.0"
tokio = { version = "1.36.0", features = ["full"] }
prost = "0.12.3"
tonic-reflection = "0.11.0"
tonic-async-interceptor = "0.11.0"
tower-http = {version = "0.4", features = ["cors"]}
tonic-web = "0.11.0"
tower = "0.4.13"
hyper = "0.14.28"
anyhow = "1.0.80"

[build-dependencies]
tonic-build = "0.11.0"
